@@ -1,3 +1,9 @@
+2005-02-10  Mark Kettenis  <kettenis@chello.nl>
+
+	* gdb.dwarf2/dw2-basic.exp, gdb.dwarf2/dw2-intercu.exp: Run tests
+	on *-*-openbsd*.  Correctly match whitespace in regukar
+	expressions.
+
 2005-02-10  Daniel Jacobowitz  <dan@debian.org>
 
 	From Ramana Radhakrishnan <ramana.radhakrishnan@codito.com>:
